# raytrace

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/base/: image.hpp
include/gpu/: gpu.hpp
include/math/: floats.hpp  functions.hpp  sampling.hpp
include/math/geometry/: normal.hpp  point.hpp  ray.hpp  vec.hpp
include/math/geometry/impl/: normal.inl  point.inl  point_base.inl  point_func.inl  ray.inl  swizzle_vec.inl  vec.inl  vec_base.inl  vec_func.inl
include/math/impl/: floats.inl  functions.inl  sampling.inl
include/math/linalg/: fmt.hpp  point.hpp  vec.hpp
include/math/linalg/impl/: point.inl  point_base.inl  point_func.inl  swizzle_vec.inl  vec.inl  vec_base.inl  vec_func.inl
include/media/: constants.hpp  video_builder.hpp
src/base/: image.cpp
src/media/: video_builder.cpp
src/prog/: cuda_test.cu  encode_video.cpp  video_builder_test.cpp
src/test/: float_test.cpp  math_functions_test.cpp  point_test.cpp  vec_test.cpp
